--- a/src/components/CurrencyInputBox.module.css
+++ b/src/components/CurrencyInputBox.module.css
@@ -1,18 +1,18 @@
 .card{
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     gap: 80px;
-    /* box-sizing: border-box; */
     align-items: center;
+    margin: 15px 0px;
 }
-.cardRight{
-    
+.cardRight{ 
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
      /* background-color: green; */
-     margin: 0px 30px;
+     /* margin: 0px 30px; */
      gap: 10px;
      
      
@@ -24,20 +24,17 @@
     display: flex;
     gap: 10px;
     /* background-color: green; */
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
-}
-.cardLeft input{
-    height: 30px;
+    justify-content: center;
 }
 .currselect{
-    height: 35px;
+    height: 2rem;
     padding: 3px;
     border-radius: 20px;
 }
-.ammoutInput{
-    /* margin-top: 20px; */
+.ammoutInput{ 
+    height: 30px;
     border-radius: 20px;
     padding: 3px;
 
